--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
-
+*.sketch
+*.xd
+*.fig
+.DS_Store
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
