--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-form": "^0.1.3",
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.4",
+    "gh-pages": "^6.3.0",
     "lightningcss": "^1.29.3",
     "radix-ui": "^1.2.0",
     "react": "^19.0.0",
